--- a/Projekt7/Exercise1.html
+++ b/Projekt7/Exercise1.html
@@ -5,6 +5,7 @@
     <title>DI Computer Graphics</title>
     <script type="text/javascript" src="webgl-debug.js"></script>
     <script type="text/javascript" src="shaderUtils.js"></script>
+    <script type="text/javascript" src="Classes.js"></script>
     <script type="text/javascript" src="Exercise1.js"></script>
     <script type="text/javascript" src="gl-matrix.js"></script>
 </head>
